# milkywayathome_client

./: .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  ChangeLog  INSTALL  MAINTAINERS  README  README.md  Vagrantfile  boinc_$<TARGET_FILE_NAME:milkyway_nbody>_0  boinc_temporary_exit  bootstrap.sh  build.py  build_client.sh  build_test_env.sh  error.txt  for_developers.lua  for_developers_bar.lua  get_test_likelihoods.py  get_test_likelihoods.sh  make_mwah_lite.sh  make_nbody_lite.sh  make_run_v2.sh  milkywayathome_client.cbp  output.txt  pal5.lua  pal5_bar.lua  parameter.lua  perf.data  rebuild.txt  rebuild_test_env.sh  run_nbody.sh  running_nbody.txt  settings.h  soft_param_sweep.py
LModL/: .gitignore  CMakeLists.txt  CONTROLS  INSTALL  README
LModL/include/: 3dproj.hpp  binfile.hpp  draw.hpp  draw24.hpp  draw32.hpp  draw32p.hpp  draw8.hpp  drawcore.hpp  drawhalo.hpp  imgplot.hpp  quatmath.hpp  rgbconv.hpp  trigtbl.hpp  vectmath.hpp
LModL/src/: 3dproj.cpp  binfile.cpp  draw.cpp  draw32.cpp  draw32p.cpp  draw8.cpp  drawcore.cpp  drawhalo.cpp  imgplot.cpp  rgbconv.cpp  smake  smakeall  trigtbl.cpp
LModL/test/: coltest.cpp  cubetest.cpp  cubetest_fullscreen.cpp  fpstest.cpp  gfxinfo.cpp  hsltest.cpp  imgrender.cpp  lin_make  lin_make_all  mac_make  mac_make_all  quattest.cpp  text2bin.c  trigtblm.cpp  win_make  win_make_all
boinc/: CMakeLists.txt  boinc.cbp  config.h.cmake.in  version.h.cmake.in
crlibm/: .gitignore  CMakeLists.txt  acos-td.c  asin-td.c  asincos.c  asincos.h  atan_accurate.c  atan_accurate.h  atan_fast.c  atan_fast.h  crlibm.cbp  crlibm.h  crlibm_config.h.in  crlibm_msvc_hacks.h  crlibm_private.c  crlibm_private.h  csh_fast.h  exp-td-standalone.c  exp-td.c  exp-td.h  expm1-standalone.c  expm1.c  expm1.h  log-de.c  log-de.h  log-de2.c  log-de2.h  log-td.c  log-td.h  log.c  log.h  log10-td.c  log10-td.h  log1p.c  log2-td.c  log2-td.h  log2_accurate.c  log2_accurate.h  log_accurate.c  log_accurate.h  (+14 more)
crlibm/scs_lib/: poly_fct.c  rand_scs.c  scs.h  scs2mpf.c  wrapper_scs.h
crlibm/tests/: CMakeLists.txt  acos.testdata  acospi.testdata  asin.testdata  asinpi.testdata  atan.testdata  atanpi.testdata  blind_test.c  cos.testdata  cosh.testdata  cospi.testdata  exp.testdata  expm1.testdata  filterlists.c  generate_test_vectors.c  interval_explog.c  log.testdata  log10.testdata  log1p.testdata  log2.testdata  pow.testdata  powmidpoint.h  sin.testdata  sinh.testdata  sinpi.testdata  soak_test-interval.c  soak_test.c  soak_test_trigpi.c  tan.testdata  tanbug.c  tanpi.testdata  test_common.c  test_common.h  test_perf-interval.c  test_perf.c  test_val.c
dSFMT/: CHANGE-LOG.txt  CMakeLists.txt  README.txt  dSFMT-params.h  dSFMT.c  dSFMT.cbp  dSFMT.h
dSFMT/html/: annotated.html  d_s_f_m_t_8c.html  d_s_f_m_t_8h-source.html  d_s_f_m_t_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  mainpage_8txt.html  struct_d_s_f_m_t___t.html  union_w128___t.html
libelf/: CMakeLists.txt  config.h.in  libelf.cbp
libelf/cmake_modules/: CheckHeaderSTDC.cmake
libelf/lib/: private.h  sys_elf.h.in
lua/: CMakeLists.txt  lua.cbp
lua/cmake_modules/: test_private_extern.c
lua/include/: lua.h  luaconf.h.in
lua/src/: loadlib_rel.c
milkyway/: CMakeLists.txt  astronomy_worker.c  astronomy_worker.h  atSurveyGeometry.c  atSurveyGeometry.h  boinc_assimilator.c  boinc_start_search.c  config.h.in  errors.c  evaluation_optimized.c  evaluation_optimized.h  evaluation_state.c  evaluation_state.h  milkyway.cbp  milkyway_client_app.c  milkyway_complex.c  milkyway_complex.h  mpi_astronomy.c  numericalIntegration.c  parameters.c  parameters.h  probability.c  probability.h  separation.c  simple_evaluator.c  simple_evaluator.h  stCnum.c  stCoords.c  stCoords.h  stMath.c  stMath.h  stVector.c  star_points.c  star_points.h
milkyway/include/: build_cl.h  expanse.h  milkyway_alloc.h  milkyway_asprintf.h  milkyway_boinc_util.h  milkyway_cl.h  milkyway_cl_device.h  milkyway_cl_program.h  milkyway_cl_setup.h  milkyway_cl_show_types.h  milkyway_cl_types.h  milkyway_cl_util.h  milkyway_config.h.in  milkyway_cpp_util.h  milkyway_cpuid.h  milkyway_extra.h  milkyway_gcc_diagnostics.h  milkyway_git_version.h.in  milkyway_lua.h  milkyway_lua_dsfmt.h  milkyway_lua_marshal.h  milkyway_lua_math.h  milkyway_lua_types.h  milkyway_lua_util.h  milkyway_lua_vector.h  milkyway_math.h  milkyway_math_autodiff.h  milkyway_math_double.h  milkyway_math_float.h  milkyway_math_functions.h  milkyway_real.h  (+33 more)
milkyway_nbody/: CMakeLists.txt  chisq.c  code.c  code.h  defs.h  getparam.c  grav.c  io.c  json_params.c  json_params.h  load.c  main.c  nbody.h  nbody_priv.h  nbody_simulation.c  nbody_types.h  orbitintegrator.c  plummer.c  real.h  stdinc.h  util.c  util.h  vectmath.h
milkyway_separation/: CMakeLists.txt  astronomy_worker.h  evaluation_optimized.c  evaluation_optimized.h  milkyway_client_app.c  numericalIntegration.c  parameters.c  stVector.c
mwtao/: CMakeLists.txt  mle.cxx
nbody/: CMakeLists.txt  milkyway_nbody.cbp
openpa/: CMakeLists.txt  openpa.cbp
popt/: CMakeLists.txt  config.h.cmake  configmake.h.cmake  popt.cbp
separation/: CMakeLists.txt  milkyway_separation.cbp
simulation/: .gitignore  CMakeLists.txt  COPYING  INSTALL  README
src/: CMakeLists.txt  milkyway_client_app.c
tests/: CMakeLists.txt  astronomy_parameters-11-aux.txt  astronomy_parameters-11-small-aux.txt  astronomy_parameters-11-small.txt  astronomy_parameters-12.txt  astronomy_parameters-79-aux.txt  astronomy_parameters-79-small-aux.txt  astronomy_parameters-82.txt  milkyway.vcproj  milkyway_vc90.sln  nbody_input.js  t_complex.c  t_cubic.c
tools/: CMakeLists.txt  FindNBodyTimes.hs  GenerateAppInfo.lua  GenerateTests.hs  HistogramPlot.sh  Inject_IL_AMD_Binary.sh  InlineKernel.c  InlineKernel.hs  MathBench.c  PrecisionTest.c  RecordNBodyVideo.sh  RunBatchNbody.py  configure-iphone-4.3  configure-iphone-5.0  indent.sh  orphan_test_template.js  sweep.py  test_set1_template.js  test_set2_template.js
(+1438 files in other folders)
